--- a/06-maquetacion-web1/blog.html
+++ b/06-maquetacion-web1/blog.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" href="assets/fonts/fontawesome-free-6.1.2-web/css/all.min.css">
     <link rel="stylesheet" href="assets/fonts/poppins/poppins.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Portafolio-Carlos</title>
 </head>
+
 <body>
     <!-- Layout Principal -->
     <div class="layout">
-        <!-- Barra Lateral (Info del usuario) -->
         <aside class="layout__aside">
             <section class="aside__user-info">
                 <!-- Informaciòn general usuario -->
 
                 <div class="user-info__general">
                     <div class="user-info__container-image">
-                        <img class="user-info__image" src="assets/img/default-user.jpg" alt="Foto de perfil del usuario">
+                        <img class="user-info__image" src="assets/img/default-user.jpg"
+                            alt="Foto de perfil del usuario">
                     </div>
 
                     <h2 class="user-info__name">Carlos Quezada</h2>
-                    <h4 class="user-info__job">Desarrollador Web</h4>
+                    <h3 class="user-info__job">Desarrollador Web</h3>
                 </div>
 
                 <!-- Menù de navegaciòn -->
@@ -38,41 +40,41 @@
                         </li>
 
                         <li class="menu__option">
-                            <a href="sobre-mi.html" class="menu__link ">
+                            <a href="sobre-mi.html" class="menu__link menu__link--active">
                                 <i class="menu__icon fa-solid fa-user"></i>
                                 <span class="menu__overlay">Sobre mì</span>
                             </a>
                         </li>
 
                         <li class="menu__option">
-                            <a href="curriculum.html" class="menu__link  ">
+                            <a href="curriculum.html" class="menu__link menu__link--active">
                                 <i class="menu__icon fa-solid fa-graduation-cap"></i>
                                 <span class="menu__overlay">Curriculum</span>
                             </a>
                         </li>
 
                         <li class="menu__option">
-                            <a href="portafolio.html" class="menu__link ">
+                            <a href="portafolio.html" class="menu__link menu__link--active">
                                 <i class="menu__icon fa-solid fa-briefcase"></i>
                                 <span class="menu__overlay">Portafolio</span>
                             </a>
                         </li>
 
                         <li class="menu__option">
-                            <a href="blog.html" class="menu__link">
+                            <a href="blog.html" class="menu__link menu__link--active">
                                 <i class="menu__icon fa-solid fa-book"></i>
                                 <span class="menu__overlay">Blog</span>
                             </a>
                         </li>
 
                         <li class="menu__option">
-                            <a href="contacto.html" class="menu__link ">
+                            <a href="contacto.html" class="menu__link menu__link--active">
                                 <i class="menu__icon fa-solid fa-envelope"></i>
                                 <span class="menu__overlay">Contacto</span>
                             </a>
                         </li>
 
-                    </ul> 
+                    </ul>
                 </nav>
 
                 <!-- Links a redes sociales -->
@@ -116,11 +118,18 @@
 
         <!-- Contenido Principal -->
         <main class="layout__content">
-            <section class="content__page">
-                <h1 class="page__name">Carlos Quezada</h1>
-                <h2 class="page__job">Desarrollador Web</h2>
+            <section class="content__page content__blog">
+                <!-- ESTE CONTENIDO CAMBIA EN CADA PAGINA DEL SITIO WEB -->
+
+                <header class="blog__header">
+                    <h1 class="blog__title">Blog</h1>
+                </header>
+
+
+
             </section>
         </main>
     </div>
 </body>
+
 </html>
