--- a/06-maquetacion-web1/sobre-mi.html
+++ b/06-maquetacion-web1/sobre-mi.html
@@ -31,28 +31,28 @@
                 <nav class="layout__menu">
                     <ul class="menu__list">
                         <li class="menu__option">
-                            <a href="index.html" class="menu__link">
+                            <a href="index.html" class="menu__link ">
                                 <i class="menu__icon fa-solid fa-house"></i>
                                 <span class="menu__overlay">Home</span>
                             </a>
                         </li>
 
                         <li class="menu__option">
-                            <a href="sobre-mi.html" class="menu__link">
+                            <a href="sobre-mi.html" class="menu__link menu__link--active">
                                 <i class="menu__icon fa-solid fa-user"></i>
                                 <span class="menu__overlay">Sobre mì</span>
                             </a>
                         </li>
 
                         <li class="menu__option">
-                            <a href="estudios.html" class="menu__link">
+                            <a href="curriculum.html" class="menu__link ">
                                 <i class="menu__icon fa-solid fa-graduation-cap"></i>
-                                <span class="menu__overlay">Estudios</span>
+                                <span class="menu__overlay">Curriculum</span>
                             </a>
                         </li>
 
                         <li class="menu__option">
-                            <a href="portafolio.html" class="menu__link">
+                            <a href="portafolio.html" class="menu__link ">
                                 <i class="menu__icon fa-solid fa-briefcase"></i>
                                 <span class="menu__overlay">Portafolio</span>
                             </a>
